Finished program (Finally)